# api.yaml
@@ -92,7 +92,6 @@ paths:
       summary: Получение страницы последних постов пользователя
       description: >
         Получение страницы с постами пользователя.
-
         Для получения первой страницы (с самыми последними постами), необходимо выполнить запрос
         без параметра `page`.
         Для получения следующей странцы, необходимо в параметр `page` передать токен следующей страницы,
@@ -142,3 +141,10 @@ paths:
                           Поле отсутствует, если текущая страница содержит самый ранний пост пользователя.
         400:
           description: Некорректный запрос, например, из-за некорректного токена страницы.
+
+  /maintenance/ping:
+    get:
+      summary: Служебный эндпоинт для определения готовности сервиса к работе
+      responses:
+        200:
+          description: Сервис готов к работе
