# server.go
@@ -10,6 +10,7 @@ import (
 	"net/http"
 	"os"
 	"time"
+    _ "github.com/motemen/go-loghttp/global"
 )
 
 type StorageMode string
@@ -51,6 +52,7 @@ func CreateServer() *http.Server {
 	r.HandleFunc("/api/v1/posts", handler.HandleCreatePost).Methods("POST")
 	r.HandleFunc("/api/v1/posts/{postId}", handler.HandleGetPost).Methods("GET")
 	r.HandleFunc("/api/v1/users/{userId}/posts", handler.HandleGetPosts).Methods("GET")
+	r.HandleFunc("/maintenance/ping", handler.HealthCheck).Methods("GET")
 
 	return &http.Server{
 		Handler:      r,
@@ -59,6 +61,7 @@ func CreateServer() *http.Server {
 		ReadTimeout:  15 * time.Second,
 	}
 }
+
 
 func main() {
 	srv := CreateServer()
